cmake_minimum_required(VERSION 3.29)
project(cpp)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(week_051 week-051.cpp)
add_executable(week_052 week-052.cpp)
add_executable(week_053 week-053.cpp)
add_executable(week_054 week-054.cpp)
add_executable(week_055 week-055.cpp)
add_executable(week_056 week-056.cpp)
add_executable(week_057 week-057.cpp)
add_executable(week_058 week-058.cpp)
add_executable(week_059 week-059.cpp)
add_executable(week_060 week-060.cpp)
add_executable(week_061 week-061.cpp)
add_executable(week_062 week-062.cpp)
add_executable(week_063 week-063.cpp)
add_executable(week_064 week-064.cpp)
add_executable(week_065 week-065.cpp)
add_executable(week_066 week-066.cpp)
add_executable(week_067 week-067.cpp)
add_executable(week_068 week-068.cpp)
add_executable(week_069 week-069.cpp)
add_executable(week_070 week-070.cpp)